--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -16,10 +16,16 @@
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: repeat(2, minmax(100px, auto));
-        gap: 10px;
         box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
     }
     .randomchar__decoration {
             display: none;
+    }
+    .randomchar__block {
+        padding: 40px 35px;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-column-gap: 30px;
+        column-gap: 10px;
     }
 }
